# Waveform_generator_pi_pico

./: CMakeLists.txt  LICENSE  README.md
Hardware_pcb_design/Experimental_analog_board_v1.1/: analog_board_fin_proto.brd  analog_board_fin_proto.sch
Hardware_pcb_design/UART_Izolator_v1.0/: uart_izol.brd  uart_izol.sch
Pico_software/: .gitignore
Pico_software/main/: CMakeLists.txt  DMA.c  DMA.h  PCM4251.h  SPI.c  SPI.h  Timer.c  UART.c  UART.h  main.c
main/: AD9833.c  AD9833.h  CMakeLists.txt  DMA.c  DMA.h  PCM4251.c  PWM.c  PWM.h  SPI.c  SPI.h  Timer.c  Timer.h  main.c
